<resources>
    <string name="app_name">InternetOfThings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported in your device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="empty_list_text">There is no device to display.</string>
    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="CLIENT_CHARACTERISTIC_CONFIG">00002902-0000-1000-8000-00805f9b34fb</string>
    <string name="no_data">No data found</string>
    <string name="label_device_address">Device Address</string>
    <string name="label_state">State:</string>
    <string name="label_data">Data:</string>
    <string name="unknown_service">Unknow Service</string>
    <string name="unknown_characteristic">Unknown Characteristic</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="label_services">Services</string>
    <string name="no_services">No services displayed</string>
</resources>
